Some styles have been reworked, fonts have been added and stylized

--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cactus+Classical+Serif&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cactus+Classical+Serif&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="icon" type="image/svg+xml" href="/public/logo.svg" />
     <link rel="canonical" href="Добавить домен!" />
     <link rel="stylesheet" href="/styles.css" />
@@ -31,16 +41,19 @@
         <div>Телефон: +32177181</div>
       </div>
     </header>
+    <!--    исправить вложенность и переделать  block1-wrapper переписать стили -->
     <main>
       <div class="block1-wrapper">
         <div class="block1-top-block">
           <div>
-            <h1>Бухгалтерские услуги</h1>
-            <h4>
-              Ваша отчетность в наших руках, оказание бухгалтерских услуг более
-              15 лет.
-            </h4>
-            <button>Консультация</button>
+            <div>
+              <h1>Бухгалтерские услуги</h1>
+              <h4>
+                Ваша отчетность в наших руках, оказание бухгалтерских услуг
+                более 15 лет.
+              </h4>
+              <button>Консультация</button>
+            </div>
           </div>
           <img src="/public/books.png" alt="Бухгалтерские услуги" />
         </div>
