added services block

--- a/index.html
+++ b/index.html
@@ -41,20 +41,17 @@
         <div>Телефон: +32177181</div>
       </div>
     </header>
-    <!--    исправить вложенность и переделать  block1-wrapper переписать стили -->
     <main>
       <div class="block1-wrapper">
-        <div class="block1-top-block">
-          <div>
-            <div>
-              <h1>Бухгалтерские услуги</h1>
-              <h4>
-                Ваша отчетность в наших руках, оказание бухгалтерских услуг
-                более 15 лет.
-              </h4>
-              <button>Консультация</button>
-            </div>
-          </div>
+        <div class="text-container">
+          <h1>Бухгалтерские услуги</h1>
+          <h4>
+            Ваша отчетность в наших руках, оказание бухгалтерских услуг более 15
+            лет.
+          </h4>
+          <button>Консультация</button>
+        </div>
+        <div class="image-wrapper">
           <img src="/public/books.png" alt="Бухгалтерские услуги" />
         </div>
       </div>
@@ -81,7 +78,52 @@
       </div>
       <div class="block3-wrapper">
         <h2>Услуги</h2>
-        <div></div>
+        <div class="block3-container-services">
+          <div class="block3-container-item">
+            <img src="/public/item1.jpeg" alt="ПОСТАНОВКА УЧЕТА" />
+            <div>
+              <h3>ПОСТАНОВКА УЧЕТА</h3>
+            </div>
+          </div>
+          <div class="block3-container-item">
+            <img src="/public/item2.jpg" alt="КОНСУЛЬТАЦИИ ПО НАЛОГАМ" />
+            <div>
+              <h3>КОНСУЛЬТАЦИИ ПО НАЛОГАМ</h3>
+            </div>
+          </div>
+          <div class="block3-container-item">
+            <img
+              src="/public/item3.jpg"
+              alt="СОСТАВЛЕНИЕ НАЛОГОВЫХ ДЕКЛАРАЦИЙ (Бухгалтерский аутсорсинг)"
+            />
+            <div>
+              <h3>
+                СОСТАВЛЕНИЕ НАЛОГОВЫХ ДЕКЛАРАЦИЙ (Бухгалтерский аутсорсинг)
+              </h3>
+            </div>
+          </div>
+          <div class="block3-container-item">
+            <img
+              src="/public/item4.jpg"
+              alt="ОПТИМИЗАЦИЯ НАЛОГООБЛОЖЕНИЯ (Бухгалтерское обслуживание)"
+            />
+            <div>
+              <h3>ОПТИМИЗАЦИЯ НАЛОГООБЛОЖЕНИЯ (Бухгалтерское обслуживание)</h3>
+            </div>
+          </div>
+          <div class="block3-container-item">
+            <img src="/public/item5.jpg" alt="БУХГАЛТЕРИЯ ДЛЯ IT" />
+            <div>
+              <h3>БУХГАЛТЕРИЯ ДЛЯ IT</h3>
+            </div>
+          </div>
+          <div class="block3-container-item">
+            <img src="/public/item6.jpg" alt="ВЕДЕНИЕ БУХГАЛТЕРСКОГО УЧЁТА" />
+            <div>
+              <h3>ВЕДЕНИЕ БУХГАЛТЕРСКОГО УЧЁТА</h3>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
     <footer></footer>
