added all sections

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Cactus+Classical+Serif&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" type="image/svg+xml" href="/public/logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="/icons/logo.svg" />
     <link rel="canonical" href="Добавить домен!" />
     <link rel="stylesheet" href="/styles.css" />
     <meta
@@ -31,14 +31,14 @@
   <body>
     <header>
       <div class="header-wrapper">
-        <img src="/public/logo.svg" alt="Логотип компании" />
+        <img src="/icons/logo.svg" alt="Логотип компании" />
         <nav class="nav-list">
           <ul>
             <li><a href="/services">Услуги</a></li>
             <li><a href="/contacts">Контакты</a></li>
           </ul>
         </nav>
-        <div>Телефон: +32177181</div>
+        <a href="tel:+375-29-348-23-59">Телефон: +375-29-348-23-59</a>
       </div>
     </header>
     <main>
@@ -46,7 +46,7 @@
         <div class="text-container">
           <h1>Бухгалтерские услуги</h1>
           <h4>
-            Ваша отчетность в наших руках, оказание бухгалтерских услуг более 15
+            Ваша отчетность в наших руках, оказание бухгалтерских услуг более 20
             лет.
           </h4>
           <button>Консультация</button>
@@ -59,20 +59,20 @@
         <h2>Преимущества</h2>
         <div class="block2-advantages">
           <div>
-            <img src="/public/task.png" alt="Сдача отчетности" />
-            <h6>Сдача отчетности в установленные сроки</h6>
+            <img src="/icons/task.png" alt="Сдача отчетности" />
+            <h5>Сдача отчетности в установленные сроки</h5>
           </div>
           <div>
-            <img src="/public/clokc.png" alt="Контроль и обратная связь" />
-            <h6>Контроль и обратная связь 24/7</h6>
+            <img src="/icons/clokc.png" alt="Контроль и обратная связь" />
+            <h5>Контроль и обратная связь 24/7</h5>
           </div>
           <div>
-            <img src="/public/diplome.png" alt="Гарантии" />
-            <h6>Гарантия компенсации штрафов</h6>
+            <img src="/icons/diplome.png" alt="Гарантии" />
+            <h5>Гарантия компенсации штрафов</h5>
           </div>
           <div>
-            <img src="/public/women.png" alt="Полное ведение" />
-            <h6>Полное ведение бухгалтерской отчетности</h6>
+            <img src="/icons/women.png" alt="Полное ведение" />
+            <h5>Полное ведение бухгалтерской отчетности</h5>
           </div>
         </div>
       </div>
@@ -80,20 +80,20 @@
         <h2>Услуги</h2>
         <div class="block3-container-services">
           <div class="block3-container-item">
-            <img src="/public/item1.jpeg" alt="ПОСТАНОВКА УЧЕТА" />
+            <img src="/block3-item1.jpeg" alt="ПОСТАНОВКА УЧЕТА" />
             <div>
               <h3>ПОСТАНОВКА УЧЕТА</h3>
             </div>
           </div>
           <div class="block3-container-item">
-            <img src="/public/item2.jpg" alt="КОНСУЛЬТАЦИИ ПО НАЛОГАМ" />
+            <img src="/block3-item2.jpg" alt="КОНСУЛЬТАЦИИ ПО НАЛОГАМ" />
             <div>
               <h3>КОНСУЛЬТАЦИИ ПО НАЛОГАМ</h3>
             </div>
           </div>
           <div class="block3-container-item">
             <img
-              src="/public/item3.jpg"
+              src="/block3-item3.jpg"
               alt="СОСТАВЛЕНИЕ НАЛОГОВЫХ ДЕКЛАРАЦИЙ (Бухгалтерский аутсорсинг)"
             />
             <div>
@@ -104,7 +104,7 @@
           </div>
           <div class="block3-container-item">
             <img
-              src="/public/item4.jpg"
+              src="/block3-item4.jpg"
               alt="ОПТИМИЗАЦИЯ НАЛОГООБЛОЖЕНИЯ (Бухгалтерское обслуживание)"
             />
             <div>
@@ -112,21 +112,117 @@
             </div>
           </div>
           <div class="block3-container-item">
-            <img src="/public/item5.jpg" alt="БУХГАЛТЕРИЯ ДЛЯ IT" />
+            <img src="/block3-item5.jpg" alt="БУХГАЛТЕРИЯ ДЛЯ IT" />
             <div>
               <h3>БУХГАЛТЕРИЯ ДЛЯ IT</h3>
             </div>
           </div>
           <div class="block3-container-item">
-            <img src="/public/item6.jpg" alt="ВЕДЕНИЕ БУХГАЛТЕРСКОГО УЧЁТА" />
+            <img src="/block3-item6.jpg" alt="ВЕДЕНИЕ БУХГАЛТЕРСКОГО УЧЁТА" />
             <div>
               <h3>ВЕДЕНИЕ БУХГАЛТЕРСКОГО УЧЁТА</h3>
             </div>
           </div>
+          <h3>
+            *Перечень оказываемых услуг периодически расширяется, основываясь на
+            спрос клиентов.
+          </h3>
+        </div>
+      </div>
+      <div class="block4-wrapper">
+        <h2>Как мы работаем</h2>
+        <div class="block4-container-jobs">
+          <div class="block4-item1">
+            <img src="/public/block4-item1.jpg" alt="ЗАКРЕПЛЕНИЕ БУХГАЛТЕРА" />
+            <div>
+              <h3>ЗАКРЕПЛЕНИЕ БУХГАЛТЕРА</h3>
+              <h4>
+                После заключения договора и обсуждения оплаты за вами
+                закрепляется индивидуальный бухгалтер.
+              </h4>
+            </div>
+          </div>
+          <div class="block4-item2">
+            <img src="/public/block4-item2.jpg" alt="ВСЕСТОРОННЯЯ ПОМОЩЬ" />
+            <div>
+              <h3>ВСЕСТОРОННЯЯ ПОМОЩЬ</h3>
+              <h4>
+                Теперь бухгалтерия, налоги и кадры будет под контролем наших
+                бухгалтеров, закрепленных за вами и вашим предприятием!
+              </h4>
+            </div>
+          </div>
+          <div class="block4-item1">
+            <img
+              src="/public/block4-item3.jpg"
+              alt="ВЫ КОНТРОЛИРУЕТЕ ОСНОВНЫЕ ПРОЦЕССЫ"
+            />
+            <div>
+              <h3>ВЫ КОНТРОЛИРУЕТЕ ОСНОВНЫЕ ПРОЦЕССЫ</h3>
+              <h4>
+                Ставите задачи вашему бухгалтеру и присылаете фото документов
+                любым удобным для вас способом!
+              </h4>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="block5-wrapper">
+        <h2>Стоимость услуг</h2>
+        <div class="block5-item-container">
+          <img src="/public/block5-item.jpg" alt="Стоимость услуг" />
+          <h3>
+            <b>Стоимость услуг</b> определяется индивидуально, в зависимости от
+            системы налогообложения, вида деятельности, количества наемных
+            сотрудников, количества документов, наличия ВЭД.
+          </h3>
+        </div>
+      </div>
+      <div class="block6-wrapper">
+        <h2>Почему выбирают нас</h2>
+        <div class="block6-item-container">
+          <div>
+            <h3>100+</h3>
+            <h4>Довольных клиентов</h4>
+          </div>
+          <div>
+            <h3>99%</h3>
+            <h4>Точность налогов</h4>
+          </div>
+          <div>
+            <h3>24/7</h3>
+            <h4>Поддержка</h4>
+          </div>
+          <div>
+            <h3>20+</h3>
+            <h4>Опыт работы</h4>
+          </div>
         </div>
       </div>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer-wrapper">
+        <div class="footer-block1">
+          <img src="/icons/logo.svg" alt="Логотип компании" />
+          <nav class="nav-list">
+            <ul>
+              <li><a href="/services">Услуги</a></li>
+              <li><a href="/contacts">Контакты</a></li>
+            </ul>
+          </nav>
+          <h4>Телефон: +375-29-348-23-59</h4>
+        </div>
+        <div class="footer-block2">
+          <div>
+            <h5>
+              НАШИ КОНТАКТЫ : ООО "Галерея Бизнеса", УНП 693207124. Тел.
+              +375-29-348-23-59. Lada77701@mail.ru
+            </h5>
+          </div>
+          <div>contacts</div>
+        </div>
+      </div>
+    </footer>
     <script src="/main.js"></script>
   </body>
 </html>
