Adaptability for different devices has been implemented; a handler has been added to the Consultation button.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
     <link rel="icon" type="image/svg+xml" href="/icons/logo.svg" />
-    <link rel="canonical" href="Добавить домен!" />
+    <link rel="canonical" href="http://mybuhgalter.by/" />
     <link rel="stylesheet" href="/styles.css" />
     <script src="main.js"></script>
     <meta
@@ -41,10 +41,8 @@
           </ul>
         </nav>
         <a href="tel:+375-29-348-23-59"
-          ><img
-            src="/public/icons/phone-50.png"
-            alt="Телефон"
-          />+375-29-348-23-59</a
+          ><img src="/icons/phone.gif" alt="Телефон" />
+          <h4>+375-29-348-23-59</h4></a
         >
       </div>
     </header>
@@ -57,7 +55,7 @@
             Ваша отчетность в наших руках, оказание бухгалтерских услуг более 20
             лет.
           </h4>
-          <button>Консультация</button>
+          <button id="consultationButton">Консультация</button>
         </div>
         <div class="image-wrapper">
           <img src="/public/books.png" alt="Бухгалтерские услуги" />
