--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
         <img src="/icons/logo.svg" alt="Логотип компании" />
         <nav class="nav-list">
           <ul>
-            <li><a href="#services">Услуги</a></li>
-            <li><a href="#cost-of-services">Стоимость услуг</a></li>
-            <li><a href="#contacts">Контакты</a></li>
+            <li><a href="#services">УСЛУГИ</a></li>
+            <li><a href="#cost-of-services">СТОИМОСТЬ УСЛУГ</a></li>
+            <li><a href="#contacts">КОНТАКТЫ</a></li>
           </ul>
         </nav>
-        <a href="tel:+375-29-348-23-59"
-          ><img src="/icons/phone.gif" alt="Телефон" />
-          <h4>+375-29-348-23-59</h4></a
-        >
       </div>
+      <a href="tel:+375-29-348-23-59"
+        ><img src="/icons/phone.svg" alt="Телефон" />
+        <h4>+375-29-348-23-59</h4></a
+      >
     </header>
     <main>
       <!-- Блок 1: Бухгалтерские услуги -->
@@ -64,22 +64,22 @@
 
       <!-- Блок 2: Преимущества -->
       <section class="block2-wrapper">
-        <h2>Преимущества</h2>
+        <h2>ПРЕИМУЩЕСТВА</h2>
         <div class="block2-advantages">
           <div>
-            <img src="/icons/task.png" alt="Сдача отчетности" />
+            <img src="/icons/task.svg" alt="Сдача отчетности" />
             <h5>Сдача отчетности в установленные сроки</h5>
           </div>
           <div>
-            <img src="/icons/clokc.png" alt="Контроль и обратная связь" />
+            <img src="/icons/clokc.svg" alt="Контроль и обратная связь" />
             <h5>Контроль и обратная связь 24/7</h5>
           </div>
           <div>
-            <img src="/icons/diplome.png" alt="Гарантии" />
+            <img src="/icons/diplome.svg" alt="Гарантии" />
             <h5>Гарантия компенсации штрафов</h5>
           </div>
           <div>
-            <img src="/icons/women.png" alt="Полное ведение" />
+            <img src="/icons/women_1.svg" alt="Полное ведение" />
             <h5>Полное ведение бухгалтерской отчетности</h5>
           </div>
         </div>
@@ -87,7 +87,7 @@
 
       <!-- Блок 3: Услуги -->
       <section id="services" class="block3-wrapper">
-        <h2>Услуги</h2>
+        <h2>УСЛУГИ</h2>
         <div class="block3-container-services">
           <article
             class="block3-container-item"
@@ -160,7 +160,7 @@
 
       <!-- Блок 4: Как мы работаем -->
       <section class="block4-wrapper">
-        <h2>Как мы работаем</h2>
+        <h2>КАК МЫ РАБОТАЕМ</h2>
         <div class="block4-container-jobs">
           <article class="block4-item1">
             <img src="/public/block4-item1.jpg" alt="ЗАКРЕПЛЕНИЕ БУХГАЛТЕРА" />
@@ -200,7 +200,7 @@
 
       <!-- Блок 5: Стоимость услуг -->
       <section id="cost-of-services" class="block5-wrapper">
-        <h2>Стоимость услуг</h2>
+        <h2>СТОИМОСТЬ УСЛУГ</h2>
         <div class="block5-item-container">
           <img src="/public/block5-item.jpg" alt="Стоимость услуг" />
           <h3>
@@ -213,7 +213,7 @@
 
       <!-- Блок 6: Почему выбирают нас -->
       <section class="block6-wrapper">
-        <h2>Почему выбирают нас</h2>
+        <h2>ПОЧЕМУ ВЫБИРАЮТ НАС</h2>
         <div class="block6-item-container">
           <div>
             <h3>100+</h3>
@@ -236,22 +236,22 @@
 
       <!-- Блок 7: Контакты -->
       <section id="contacts" class="block7-wrapper">
-        <h2>Контакты</h2>
+        <h2>КОНТАКТЫ</h2>
         <div>
           <a href="mailto:Lada77701@mail.ru"
-            ><img src="/public/icons/mail-50.png" alt="Почта" />Почта</a
+            ><img src="/public/icons/mail-100.svg" alt="Почта" />Почта</a
           >
           <a href="https://t.me/+375293482359"
             ><img
-              src="/public/icons/telegram-50%20.png"
+              src="/public/icons/telegram-100_1.svg"
               alt="Telegram"
             />Telegram</a
           >
           <a href="viber://chat?number=%2B375293482359"
-            ><img src="/public/icons/viber-50.png" alt="Viber" />Viber</a
+            ><img src="/public/icons/viber-100_1.svg" alt="Viber" />Viber</a
           >
           <a href="tel:+375-29-348-23-59"
-            ><img src="/public/icons/phone-50.png" alt="Телефон" />Телефон</a
+            ><img src="/public/icons/phone.svg" alt="Телефон" />Телефон</a
           >
         </div>
         <div></div>
