--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Cactus+Classical+Serif&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" type="image/svg+xml" href="/icons/logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="/public/icons/logo.svg" />
     <link rel="canonical" href="http://mybuhgalter.by/" />
     <link rel="stylesheet" href="/styles.css" />
     <script src="main.js"></script>
@@ -32,7 +32,7 @@
   <body>
     <header>
       <div class="header-wrapper">
-        <img src="/icons/logo.svg" alt="Логотип компании" />
+        <img src="/public/icons/logo.svg" alt="Логотип компании" />
         <nav class="nav-list">
           <ul>
             <li><a href="#services">УСЛУГИ</a></li>
@@ -42,7 +42,7 @@
         </nav>
       </div>
       <a href="tel:+375-29-348-23-59"
-        ><img src="/icons/phone.svg" alt="Телефон" />
+        ><img src="/public/icons/phone.svg" alt="Телефон" />
         <h4>+375-29-348-23-59</h4></a
       >
     </header>
@@ -67,19 +67,22 @@
         <h2>ПРЕИМУЩЕСТВА</h2>
         <div class="block2-advantages">
           <div>
-            <img src="/icons/task.svg" alt="Сдача отчетности" />
+            <img src="/public/icons/task.svg" alt="Сдача отчетности" />
             <h5>Сдача отчетности в установленные сроки</h5>
           </div>
           <div>
-            <img src="/icons/clokc.svg" alt="Контроль и обратная связь" />
+            <img
+              src="/public/icons/clokc.svg"
+              alt="Контроль и обратная связь"
+            />
             <h5>Контроль и обратная связь 24/7</h5>
           </div>
           <div>
-            <img src="/icons/diplome.svg" alt="Гарантии" />
+            <img src="/public/icons/diplome.svg" alt="Гарантии" />
             <h5>Гарантия компенсации штрафов</h5>
           </div>
           <div>
-            <img src="/icons/women_1.svg" alt="Полное ведение" />
+            <img src="/public/icons/women_1.svg" alt="Полное ведение" />
             <h5>Полное ведение бухгалтерской отчетности</h5>
           </div>
         </div>
@@ -93,7 +96,7 @@
             class="block3-container-item"
             data-description="• Постановка бухгалтерского учета;<br>• Разработка учетной политики юрлица;<br>• Разработка оптимального документооборота с постановкой учета;<br>• Внедрение 1С."
           >
-            <img src="/block3-item1.jpeg" alt="ПОСТАНОВКА УЧЕТА" />
+            <img src="/public/block3-item1.jpeg" alt="ПОСТАНОВКА УЧЕТА" />
             <div class="service-description">
               <h3>ПОСТАНОВКА УЧЕТА</h3>
             </div>
@@ -102,7 +105,7 @@
             class="block3-container-item"
             data-description="• Бух.услуги и услуги по бухучету для физических и юридических лиц;<br>• Консультации по налогам онлайн;"
           >
-            <img src="/block3-item2.jpg" alt="КОНСУЛЬТАЦИИ ПО НАЛОГАМ" />
+            <img src="/public/block3-item2.jpg" alt="КОНСУЛЬТАЦИИ ПО НАЛОГАМ" />
             <div class="service-description">
               <h3>КОНСУЛЬТАЦИИ ПО НАЛОГАМ</h3>
             </div>
@@ -112,7 +115,7 @@
             data-description="• Помогаем в оформлении налоговых деклараций по любым налогам и сборам;<br>• Отчеты в ФСЗН;<br>• Белгосстрах и органы статистики."
           >
             <img
-              src="/block3-item3.jpg"
+              src="/public/block3-item3.jpg"
               alt="СОСТАВЛЕНИЕ НАЛОГОВЫХ ДЕКЛАРАЦИЙ (Бухгалтерский аутсорсинг)"
             />
             <div class="service-description">
@@ -126,7 +129,7 @@
             data-description="• Помогаем с выбором системы налогообложения;<br>• Производим расчет налогов на конкретных цифрах для бизнеса по системам налогообложения."
           >
             <img
-              src="/block3-item4.jpg"
+              src="/public/block3-item4.jpg"
               alt="ОПТИМИЗАЦИЯ НАЛОГООБЛОЖЕНИЯ (Бухгалтерское обслуживание)"
             />
             <div class="service-description">
@@ -137,7 +140,7 @@
             class="block3-container-item"
             data-description="Проводим бухгалтерское обслуживание IT-компаний;"
           >
-            <img src="/block3-item5.jpg" alt="БУХГАЛТЕРИЯ ДЛЯ IT" />
+            <img src="/public/block3-item5.jpg" alt="БУХГАЛТЕРИЯ ДЛЯ IT" />
             <div class="service-description">
               <h3>БУХГАЛТЕРИЯ ДЛЯ IT</h3>
             </div>
@@ -146,7 +149,10 @@
             class="block3-container-item"
             data-description="Оказываем бух.услуги в различных отраслях и сферах деятельности индивидуальных предпринимателей и предприятий;"
           >
-            <img src="/block3-item6.jpg" alt="ВЕДЕНИЕ БУХГАЛТЕРСКОГО УЧЁТА" />
+            <img
+              src="/public/block3-item6.jpg"
+              alt="ВЕДЕНИЕ БУХГАЛТЕРСКОГО УЧЁТА"
+            />
             <div class="service-description">
               <h3>ВЕДЕНИЕ БУХГАЛТЕРСКОГО УЧЁТА</h3>
             </div>
@@ -258,7 +264,7 @@
       </section>
     </main>
     <footer>
-      <img src="/icons/logo.svg" alt="Логотип компании" />
+      <img src="/public/icons/logo.svg" alt="Логотип компании" />
       <div class="footer-block">
         <h5>
           ООО "Галерея Бизнеса", УНП 693207124.
