--- a/index.html
+++ b/index.html
@@ -94,7 +94,12 @@
         <div class="block3-container-services">
           <article
             class="block3-container-item"
-            data-description="• Постановка бухгалтерского учета;<br>• Разработка учетной политики юрлица;<br>• Разработка оптимального документооборота с постановкой учета;<br>• Внедрение 1С."
+            data-description="<ul>
+              <li>Постановка бухгалтерского учета</li>
+              <li>Разработка учетной политики юрлица</li>
+              <li>Разработка оптимального документооборота с постановкой учета</li>
+              <li>Внедрение 1С.</li>
+              </ul>"
           >
             <img src="/public/block3-item1.jpeg" alt="ПОСТАНОВКА УЧЕТА" />
             <div class="service-description">
@@ -103,7 +108,10 @@
           </article>
           <article
             class="block3-container-item"
-            data-description="• Бух.услуги и услуги по бухучету для физических и юридических лиц;<br>• Консультации по налогам онлайн;"
+            data-description="<ul>
+             <li>Бух.услуги и услуги по бухучету для физических и юридических лиц</li>
+             <li>Консультации по налогам онлайн</li>
+             </ul>"
           >
             <img src="/public/block3-item2.jpg" alt="КОНСУЛЬТАЦИИ ПО НАЛОГАМ" />
             <div class="service-description">
@@ -112,7 +120,11 @@
           </article>
           <article
             class="block3-container-item"
-            data-description="• Помогаем в оформлении налоговых деклараций по любым налогам и сборам;<br>• Отчеты в ФСЗН;<br>• Белгосстрах и органы статистики."
+            data-description="<ul>
+             <li>Помогаем в оформлении налоговых деклараций по любым налогам и сборам</li>
+             <li>Отчеты в ФСЗН</li>
+             <li>Белгосстрах и органы статистики</li>
+             </ul>"
           >
             <img
               src="/public/block3-item3.jpg"
@@ -126,7 +138,10 @@
           </article>
           <article
             class="block3-container-item"
-            data-description="• Помогаем с выбором системы налогообложения;<br>• Производим расчет налогов на конкретных цифрах для бизнеса по системам налогообложения."
+            data-description="<ul>
+             <li>Помогаем с выбором системы налогообложения</li>
+             <li>Производим расчет налогов на конкретных цифрах для бизнеса по системам налогообложения</li>
+             </ul>"
           >
             <img
               src="/public/block3-item4.jpg"
@@ -138,7 +153,9 @@
           </article>
           <article
             class="block3-container-item"
-            data-description="Проводим бухгалтерское обслуживание IT-компаний;"
+            data-description="<ul>
+             <li>Проводим бухгалтерское обслуживание IT-компаний</li>
+             </ul>"
           >
             <img src="/public/block3-item5.jpg" alt="БУХГАЛТЕРИЯ ДЛЯ IT" />
             <div class="service-description">
@@ -147,7 +164,9 @@
           </article>
           <article
             class="block3-container-item"
-            data-description="Оказываем бух.услуги в различных отраслях и сферах деятельности индивидуальных предпринимателей и предприятий;"
+            data-description="<ul>
+             <li>Оказываем бух.услуги в различных отраслях и сферах деятельности индивидуальных предпринимателей и предприятий</li>
+             </ul>"
           >
             <img
               src="/public/block3-item6.jpg"
@@ -209,11 +228,11 @@
         <h2>СТОИМОСТЬ УСЛУГ</h2>
         <div class="block5-item-container">
           <img src="/public/block5-item.jpg" alt="Стоимость услуг" />
-          <h3>
+          <h4>
             <b>Стоимость услуг</b> определяется индивидуально, в зависимости от
             системы налогообложения, вида деятельности, количества наемных
             сотрудников, количества документов, наличия ВЭД.
-          </h3>
+          </h4>
         </div>
       </section>
 
