--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
     <link rel="icon" type="image/svg+xml" href="/public/icons/logo.svg" />
-    <link rel="canonical" href="http://mybuhgalter.by/" />
+    <link rel="canonical" href="https://mybuhgalter.by/" />
     <link rel="stylesheet" href="/styles.css" />
     <script src="main.js"></script>
     <meta
@@ -33,13 +33,11 @@
     <header>
       <div class="header-wrapper">
         <img src="/public/icons/logo.svg" alt="Логотип компании" />
-        <nav class="nav-list">
-          <ul>
-            <li><a href="#services">УСЛУГИ</a></li>
-            <li><a href="#cost-of-services">СТОИМОСТЬ УСЛУГ</a></li>
-            <li><a href="#contacts">КОНТАКТЫ</a></li>
-          </ul>
-        </nav>
+        <ul>
+          <li><a href="#services">УСЛУГИ</a></li>
+          <li><a href="#cost-of-services">СТОИМОСТЬ УСЛУГ</a></li>
+          <li><a href="#contacts">КОНТАКТЫ</a></li>
+        </ul>
       </div>
       <a href="tel:+375-29-348-23-59"
         ><img src="/public/icons/phone.svg" alt="Телефон" />
