--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
@@ -13,10 +13,10 @@
       href="https://fonts.googleapis.com/css2?family=Cactus+Classical+Serif&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" type="image/svg+xml" href="/public/icons/logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="/icons/logo.svg" />
     <link rel="canonical" href="https://mybuhgalter.by/" />
     <link rel="stylesheet" href="/styles.css" />
-    <script src="main.js"></script>
+    <script async type="module" src="main.js"></script>
     <meta
       name="keywords"
       content="бухгалтерские услуги, бухгалтерия, налоговая подготовка, финансовый консалтинг, бухгалтерский аутсорсинг, малый бизнес, средний бизнес"
@@ -32,7 +32,7 @@
   <body>
     <header>
       <div class="header-wrapper">
-        <img src="/public/icons/logo.svg" alt="Логотип компании" />
+        <img src="/icons/logo.svg" alt="Логотип компании" />
         <ul>
           <li><a href="#services">УСЛУГИ</a></li>
           <li><a href="#cost-of-services">СТОИМОСТЬ УСЛУГ</a></li>
@@ -40,7 +40,7 @@
         </ul>
       </div>
       <a href="tel:+375-29-348-23-59"
-        ><img src="/public/icons/phone.svg" alt="Телефон" />
+        ><img src="/icons/phone.svg" alt="Телефон" />
         <h4>+375-29-348-23-59</h4></a
       >
     </header>
@@ -56,7 +56,7 @@
           <button id="consultationButton">Консультация</button>
         </div>
         <div class="image-wrapper">
-          <img src="/public/books.png" alt="Бухгалтерские услуги" />
+          <img src="/books.png" alt="Бухгалтерские услуги" />
         </div>
       </section>
 
@@ -65,22 +65,19 @@
         <h2>ПРЕИМУЩЕСТВА</h2>
         <div class="block2-advantages">
           <div>
-            <img src="/public/icons/task.svg" alt="Сдача отчетности" />
+            <img src="/icons/task.svg" alt="Сдача отчетности" />
             <h5>Сдача отчетности в установленные сроки</h5>
           </div>
           <div>
-            <img
-              src="/public/icons/clokc.svg"
-              alt="Контроль и обратная связь"
-            />
+            <img src="/icons/clokc.svg" alt="Контроль и обратная связь" />
             <h5>Контроль и обратная связь 24/7</h5>
           </div>
           <div>
-            <img src="/public/icons/diplome.svg" alt="Гарантии" />
+            <img src="/icons/diplome.svg" alt="Гарантии" />
             <h5>Гарантия компенсации штрафов</h5>
           </div>
           <div>
-            <img src="/public/icons/women_1.svg" alt="Полное ведение" />
+            <img src="/icons/women_1.svg" alt="Полное ведение" />
             <h5>Полное ведение бухгалтерской отчетности</h5>
           </div>
         </div>
@@ -99,7 +96,7 @@
               <li>Внедрение 1С.</li>
               </ul>"
           >
-            <img src="/public/block3-item1.jpeg" alt="ПОСТАНОВКА УЧЕТА" />
+            <img src="/block3-item1.jpeg" alt="ПОСТАНОВКА УЧЕТА" />
             <div class="service-description">
               <h3>ПОСТАНОВКА УЧЕТА</h3>
             </div>
@@ -111,7 +108,7 @@
              <li>Консультации по налогам онлайн</li>
              </ul>"
           >
-            <img src="/public/block3-item2.jpg" alt="КОНСУЛЬТАЦИИ ПО НАЛОГАМ" />
+            <img src="/block3-item2.jpg" alt="КОНСУЛЬТАЦИИ ПО НАЛОГАМ" />
             <div class="service-description">
               <h3>КОНСУЛЬТАЦИИ ПО НАЛОГАМ</h3>
             </div>
@@ -125,7 +122,7 @@
              </ul>"
           >
             <img
-              src="/public/block3-item3.jpg"
+              src="/block3-item3.jpg"
               alt="СОСТАВЛЕНИЕ НАЛОГОВЫХ ДЕКЛАРАЦИЙ (Бухгалтерский аутсорсинг)"
             />
             <div class="service-description">
@@ -142,7 +139,7 @@
              </ul>"
           >
             <img
-              src="/public/block3-item4.jpg"
+              src="/block3-item4.jpg"
               alt="ОПТИМИЗАЦИЯ НАЛОГООБЛОЖЕНИЯ (Бухгалтерское обслуживание)"
             />
             <div class="service-description">
@@ -155,7 +152,7 @@
              <li>Проводим бухгалтерское обслуживание IT-компаний</li>
              </ul>"
           >
-            <img src="/public/block3-item5.jpg" alt="БУХГАЛТЕРИЯ ДЛЯ IT" />
+            <img src="/block3-item5.jpg" alt="БУХГАЛТЕРИЯ ДЛЯ IT" />
             <div class="service-description">
               <h3>БУХГАЛТЕРИЯ ДЛЯ IT</h3>
             </div>
@@ -166,10 +163,7 @@
              <li>Оказываем бух.услуги в различных отраслях и сферах деятельности индивидуальных предпринимателей и предприятий</li>
              </ul>"
           >
-            <img
-              src="/public/block3-item6.jpg"
-              alt="ВЕДЕНИЕ БУХГАЛТЕРСКОГО УЧЁТА"
-            />
+            <img src="/block3-item6.jpg" alt="ВЕДЕНИЕ БУХГАЛТЕРСКОГО УЧЁТА" />
             <div class="service-description">
               <h3>ВЕДЕНИЕ БУХГАЛТЕРСКОГО УЧЁТА</h3>
             </div>
@@ -186,7 +180,7 @@
         <h2>КАК МЫ РАБОТАЕМ</h2>
         <div class="block4-container-jobs">
           <article class="block4-item1">
-            <img src="/public/block4-item1.jpg" alt="ЗАКРЕПЛЕНИЕ БУХГАЛТЕРА" />
+            <img src="/block4-item1.jpg" alt="ЗАКРЕПЛЕНИЕ БУХГАЛТЕРА" />
             <div>
               <h3>ЗАКРЕПЛЕНИЕ БУХГАЛТЕРА</h3>
               <h4>
@@ -196,7 +190,7 @@
             </div>
           </article>
           <article class="block4-item2">
-            <img src="/public/block4-item2.jpg" alt="ВСЕСТОРОННЯЯ ПОМОЩЬ" />
+            <img src="/block4-item2.jpg" alt="ВСЕСТОРОННЯЯ ПОМОЩЬ" />
             <div>
               <h3>ВСЕСТОРОННЯЯ ПОМОЩЬ</h3>
               <h4>
@@ -207,7 +201,7 @@
           </article>
           <article class="block4-item1">
             <img
-              src="/public/block4-item3.jpg"
+              src="/block4-item3.jpg"
               alt="ВЫ КОНТРОЛИРУЕТЕ ОСНОВНЫЕ ПРОЦЕССЫ"
             />
             <div>
@@ -225,7 +219,7 @@
       <section id="cost-of-services" class="block5-wrapper">
         <h2>СТОИМОСТЬ УСЛУГ</h2>
         <div class="block5-item-container">
-          <img src="/public/block5-item.jpg" alt="Стоимость услуг" />
+          <img src="/block5-item.jpg" alt="Стоимость услуг" />
           <h4>
             <b>Стоимость услуг</b> определяется индивидуально, в зависимости от
             системы налогообложения, вида деятельности, количества наемных
@@ -262,26 +256,23 @@
         <h2>КОНТАКТЫ</h2>
         <div>
           <a href="mailto:Lada77701@mail.ru"
-            ><img src="/public/icons/mail-100.svg" alt="Почта" />Почта</a
+            ><img src="/icons/mail-100.svg" alt="Почта" />Почта</a
           >
           <a href="https://t.me/+375293482359"
-            ><img
-              src="/public/icons/telegram-100_1.svg"
-              alt="Telegram"
-            />Telegram</a
+            ><img src="/icons/telegram-100_1.svg" alt="Telegram" />Telegram</a
           >
           <a href="viber://chat?number=%2B375293482359"
-            ><img src="/public/icons/viber-100_1.svg" alt="Viber" />Viber</a
+            ><img src="/icons/viber-100_1.svg" alt="Viber" />Viber</a
           >
           <a href="tel:+375-29-348-23-59"
-            ><img src="/public/icons/phone.svg" alt="Телефон" />Телефон</a
+            ><img src="/icons/phone.svg" alt="Телефон" />Телефон</a
           >
         </div>
         <div></div>
       </section>
     </main>
     <footer>
-      <img src="/public/icons/logo.svg" alt="Логотип компании" />
+      <img src="/icons/logo.svg" alt="Логотип компании" />
       <div class="footer-block">
         <h5>
           ООО "Галерея Бизнеса", УНП 693207124.
